corrected small error in to_be_or_not_to_be.ipynb

--- a/Problem_Solving/To_be_or_not_to_be/to_be_or_not_to_be.ipynb
+++ b/Problem_Solving/To_be_or_not_to_be/to_be_or_not_to_be.ipynb
@@ -52,7 +52,7 @@
     {
      "data": {
       "text/plain": [
-       "'E'"
+       "'B'"
       ]
      },
      "execution_count": 2,
@@ -62,7 +62,7 @@
    ],
    "source": [
     "#Showing the first element\n",
-    "target[4]"
+    "target[3]"
    ]
   },
   {
@@ -126,24 +126,24 @@
     {
      "data": {
       "text/plain": [
-       "['I',\n",
-       " 'E',\n",
-       " 'S',\n",
-       " 'F',\n",
-       " 'U',\n",
-       " 'D',\n",
-       " 'K',\n",
+       "['G',\n",
+       " 'I',\n",
+       " 'O',\n",
        " 'A',\n",
+       " 'Z',\n",
+       " 'H',\n",
+       " 'N',\n",
+       " 'S',\n",
+       " 'Q',\n",
+       " 'D',\n",
+       " 'Y',\n",
+       " 'P',\n",
+       " 'B',\n",
+       " 'L',\n",
        " 'M',\n",
        " 'T',\n",
-       " 'H',\n",
-       " 'B',\n",
-       " 'Y',\n",
-       " 'V',\n",
-       " 'P',\n",
-       " 'O',\n",
-       " 'W',\n",
-       " 'L']"
+       " 'U',\n",
+       " 'C']"
       ]
      },
      "execution_count": 5,
@@ -173,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "'IESFUDKAMTHBYVPOWL'"
+       "'GIOAZHNSQDYPBLMTUC'"
       ]
      },
      "execution_count": 6,
@@ -716,7 +716,7 @@
     {
      "data": {
       "text/plain": [
-       "'AAAAAEAAAAAA'"
+       "'AAAAAAAAAAAAP'"
       ]
      },
      "execution_count": 18,
@@ -769,25 +769,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 IZCSWOAGFTVLEYMPXD 0\n",
-      "7 IZCSWOAGFTVLETMPXD 1\n",
-      "22 IZCSWOAG TVLETMPXD 2\n",
-      "43 IZCSWOAR TVLETMPXD 3\n",
-      "77 IZCSEOAR TVLETMPXD 4\n",
-      "80 IZCSEOAR TVTETMPXD 5\n",
-      "165 IOCSEOAR TVTETMPXD 6\n",
-      "188 IOCSEOAR TOTETMPXD 7\n",
-      "194 TOCSEOAR TOTETMPXD 8\n",
-      "243 TOCSEOAR TOTETOPXD 9\n",
-      "280 TOCSEOAR TOTETOPBD 10\n",
-      "281 TOCSEOAR TOT TOPBD 11\n",
-      "310 TO SEOAR TOT TOPBD 12\n",
-      "513 TO SEOAR TOT TO BD 13\n",
-      "537 TO SEOOR TOT TO BD 14\n",
-      "987 TO SEOOR NOT TO BD 15\n",
-      "1078 TO SEOOR NOT TO BE 16\n",
-      "1409 TO BEOOR NOT TO BE 17\n",
-      "2720 TO BE OR NOT TO BE 18\n"
+      "0 ZSQUEMHCGIRJYLWPDF 1\n",
+      "47 ZSQUEMHRGIRJYLWPDF 2\n",
+      "53 ZSQUEMHRGIRJ LWPDF 3\n",
+      "64 ZSQUEMHRGIRJ LWPDE 4\n",
+      "122 TSQUEMHRGIRJ LWPDE 5\n",
+      "204 TOQUEMHRGIRJ LWPDE 6\n",
+      "237 TOQUEMHRGIRJ TWPDE 7\n",
+      "274 TOQBEMHRGIRJ TWPDE 8\n",
+      "275 TOQBEMHRGIRJ TWPBE 9\n",
+      "276 TO BEMHRGIRJ TWPBE 10\n",
+      "282 TO BEMHR IRJ TWPBE 11\n",
+      "325 TO BEMHR IRJ TOPBE 12\n",
+      "358 TO BE HR IRJ TOPBE 13\n",
+      "446 TO BE HR NRJ TOPBE 14\n",
+      "535 TO BE HR NRT TOPBE 15\n",
+      "781 TO BE HR NRT TO BE 16\n",
+      "956 TO BE HR NOT TO BE 17\n",
+      "1060 TO BE OR NOT TO BE 18\n"
      ]
     }
    ],
@@ -795,12 +794,10 @@
     "# Generate the first candidate at random\n",
     "best = ''.join(random.sample(charlist,18))\n",
     "score = check(best,target)\n",
-    "i = 1\n",
-    "print(i,best,score)\n",
+    "print(0,best,score)\n",
     "\n",
     "maxit = 10000\n",
     "for i in range(maxit):\n",
-    "    i += 1\n",
     "    \n",
     "    new = mutation(best,charlist)\n",
     "    newscore = check(new,target)\n",
@@ -809,7 +806,7 @@
     "    if newscore > score:\n",
     "        best = new\n",
     "        score = newscore\n",
-    "        print(i,best,score)\n",
+    "        print(i+1,best,score)\n",
     "    \n",
     "    # Stop if the score reaches the maximum\n",
     "    if score >= len(target):\n",
@@ -835,7 +832,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('DMSGIJ QWLYXTOUNVH', 0), ('EIBSUNYRQZF TGCWKD', 1), ('CBQAMJUH NGZKYDFEV', 2), ('OPT ZDGYHNXBIFMRCQ', 1), ('EQMPZBHLCDXIWUYKTV', 0), ('GXQL BTDNICZPUVYOW', 0), ('EONADQGJIUXWVLY MS', 2), ('GAL SWHCMOENFPVBKU', 0), ('MKARS ZTWNEVIFBDLY', 2), ('CPKBUQD ZHGRYJTIOL', 1)]\n"
+      "[('BRYFELPJNXIQA UWVG', 1), ('VTLJMH QNWSKXZOUCE', 2), ('KXUFNPRBMIHWVAGQZT', 0), ('UJSRYDIGWKZLCANHFT', 0), ('FEGZOHIXKS CMUWTYR', 0), ('SNEPKDXRLCYHMVTFIQ', 1), ('JCERDUKO BTQALXSHV', 1), ('UFPLAZQNGDCOJKTXWR', 0), ('DIYXELVMJWPKOTBNRZ', 2), ('NDLUVRKXCOWJGAPSMF', 0)]\n"
      ]
     }
    ],
@@ -874,8 +871,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1st selected organism: DMSGIJ QWLYXTOUNVH\n",
-      "2nd selected organism: CBQAMJUH NGZKYDFEV\n"
+      "1st selected organism: UJSRYDIGWKZLCANHFT\n",
+      "2nd selected organism: DIYXELVMJWPKOTBNRZ\n"
      ]
     }
    ],
@@ -919,8 +916,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1st offspring: DMSGIJUH NGZKYDFEV\n",
-      "2nd offspring: CBQAMJ QWLYXTOUNVH\n"
+      "1st offspring: UJSRYDIGJWPKOTBNRZ\n",
+      "2nd offspring: DIYXELVMWKZLCANHFT\n"
      ]
     }
    ],
@@ -969,34 +966,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NYEQR JCZKFTUXGWBL 3\n",
-      "NXWVEQOVHXEM TFPUR 4\n",
-      "TI KR JR JUC TDHME 8\n",
-      "TO BE NR JUC TWPBL 11\n",
-      "TO BE OR NOTUTFOJ  13\n",
-      "TO BE OR XOT TUWBW 14\n",
-      "TO BE OR NOT TDWBL 15\n",
-      "TO BE OR NOT TFWBL 15\n",
-      "TO BE OR NOT TWWBL 15\n",
-      "TO BE OR NOT TFWBL 15\n",
-      "TO BE OR NOT TFPBL 15\n",
-      "TO BE OR NOT TFPBL 15\n",
-      "TO BE OR NOT TFOBL 15\n",
-      "TO BE OR NOT TFWBL 15\n",
-      "TO BE OR NOT TUPBL 15\n",
-      "TO BE OR NOT TFPBL 15\n",
-      "TO BE OR NOT TFWBL 15\n",
-      "TO BE OR NOT TFPBL 15\n",
-      "TO BE OR NOT TFPBL 15\n",
-      "TO BE OR NOT TFPBL 15\n",
-      "TO BE OR NOT TFPBL 15\n"
+      "BO CXTIKZNPDQUSVFA 3\n",
+      "BO CXTIKZNPDQUSMNE 4\n",
+      " X BUCBR NPT XOPBF 9\n",
+      "TO BTGOR NPT FOPBF 12\n",
+      "TO BEFOR NPT FOMNE 13\n",
+      "TO BE OR NPT XOLBF 14\n",
+      "TO BE OR NOT XOPNE 15\n",
+      "TO BE OR NOT XOPBF 15\n",
+      "TO BE OR NOT XOPBF 15\n",
+      "TO BE OR NOT XOMBF 15\n",
+      "TO BE OR NOT AOPNE 15\n",
+      "TO BE OR NOT XOPJE 15\n",
+      "TO BE OR NOT XOPDE 15\n",
+      "TO BE OR NOT AOPNE 15\n",
+      "TO BE OR NOT XOPBF 15\n",
+      "TO BE OR NOT XOPBF 15\n",
+      "TO BE OR NOT AOPNE 15\n",
+      "TO BE OR NOT XOPBF 15\n",
+      "TO BE OR NOT XOPBF 15\n",
+      "TO BE OR NOT XOPNE 15\n",
+      "TO BE OR NOT XOPNE 15\n"
      ]
     }
    ],
@@ -1043,7 +1040,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1057,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
